# eIRC

./: .bazelignore  .bazelrc  .clang.format  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE
etc/nginx/: lua_env.conf  lua_package_cpath.conf  lua_package_path.conf  nginx.dist.conf  rewrites.conf  routes.conf  ssl-params.dist.conf
etc/php/: php.dist.ini
etc/supervisor/: queue-manager.conf.dist
etc/supervisor/conf.d/: supervisord.conf.dist
lib/irc-client/: ArgParser.cpp  ArgParser.hpp  AuthStrategy.hpp  BUILD.bazel  Base64.hpp  Channel.hpp  EventHandler.hpp  IOAdapter.hpp  IRCClient.cpp  IRCClient.hpp  IRCEventKeys.hpp  Logger.cpp  Logger.hpp  NcursesUI.cpp  NcursesUI.hpp  NickServAdapter.cpp  NickServAdapter.hpp  SaslAdapter.cpp  SaslAdapter.hpp  UnixSocketUI.cpp  UnixSocketUI.hpp  User.hpp  WhoisState.hpp  main.cpp
lib/irc-client/Commands/: ChannelsCommand.hpp  Command.hpp  InputCommand.hpp  QuitCommand.hpp  UsersCommand.hpp
lib/irc-client/EventHandlers/: MotdEndHandler.hpp  NameReplyHandler.hpp  PingHandler.hpp  PrivmsgHandler.hpp  WhoisHandler.hpp
lib/lua/jesse-greathouse/eIRC/: env.lua  http.lua
lib/lua/jesse-greathouse/eIRC/api/: client.lua
lib/lua/jesse-greathouse/eIRC/routes/api/: nickserv_password.lua  nickserv_register.lua
lib/lua/jesse-greathouse/eIRC/routes/websocket/: chat.lua
lib/lua/jesse-greathouse/eIRC/stores/: irc_instance_store.lua  token_store.lua
lib/lua/jesse-greathouse/eIRC/test/websocket/server/: test_irc_socket_module.lua
lib/lua/jesse-greathouse/eIRC/websocket/server/: init.lua  irc_socket.lua
src/: composer.json  eslint.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/app/Console/Commands/: NickServRegisterUser.php  ResetSaslSecret.php
src/app/Http/Controllers/: AvatarController.php  ChatController.php  ProfileController.php
src/app/Http/Controllers/Api/: AuthUserLookupController.php  ProfileController.php  UserController.php  UserUpdateController.php
src/app/Http/Controllers/Settings/: ProfileController.php
src/app/Http/Middleware/: HandleInertiaRequests.php
src/app/Http/Requests/: AvatarStoreRequest.php  AvatarUpdateRequest.php  FailedValidationTrait.php  ProfileStoreRequest.php  ProfileUpdateRequest.php  RealnameRequest.php  UserStoreRequest.php  UserUpdateRequest.php
src/app/Http/Resources/: AuthenticatedUserResource.php  AvatarResource.php  ProfileResource.php  UserResource.php  UserShallowResource.php
src/app/Jobs/: RegisterNickServ.php  ResetSaslSecret.php
src/app/Models/: Avatar.php  Profile.php  User.php
src/app/Providers/: AppServiceProvider.php  AuthServiceProvider.php  RouteServiceProvider.php
src/app/Services/: NickServRegistrar.php
src/config/: logging.php  passport.php  queue.php
src/database/migrations/: 2025_04_16_054829_add_irc_fields_to_users_table.php  2025_04_24_130414_create_profiles_table.php  2025_04_24_131414_add_avatars_table.php  2025_04_24_133847_add_realname_id_to_users_table.php  2025_04_24_141609_add_avatar_relationsips_to_profiles_table.php  2025_05_07_000000_add_sasl_secret_to_users_table.php  2025_05_09_025740_add_is_irc_registered_to_users_table.php
src/database/seeders/: AdminSeeder.php
src/irc-client/: ArgParser.cpp  BUILD.bazel  IRCClient.cpp  IRCClient.hpp  Logger.hpp  NcursesUI.cpp  UnixSocketUI.hpp  WORKSPACE  client  main.cpp
src/resources/css/: app.css  fonts.css
src/resources/js/: .d.ts  app.ts
src/resources/js/chat-commands/: commandMap.ts  join.ts  me.ts  notice.ts  privmsg.ts  types.ts  whois.ts
src/resources/js/components/: AppSidebar.vue  AppSidebarHeader.vue  NavUser.vue  UserMenuContent.vue
src/resources/js/components/chat/: BaseChatPane.vue  BasePaneHeader.vue  ChannelPane.vue  ChannelPaneHeader.vue  ChannelUserListCard.vue  ChatInput.vue  ConsolePane.vue  ConsolePaneHeader.vue  PrivmsgPane.vue  PrivmsgPaneHeader.vue  UserPopoverContent.vue  helpers.ts
src/resources/js/components/nav/: ChatContextMenu.vue  MainNav.vue  ProfileContextMenu.vue
src/resources/js/components/profile/: ProfilePane.vue
src/resources/js/components/ui/textarea/: TextArea.vue
src/resources/js/composables/: useChannelTabs.ts  useChatTabs.ts  useClient.ts  useIrcClient.ts  useIrcLines.ts  useLinkify.ts  usePrivmsgTabs.ts  useProfiles.ts  useWebSocket.ts
src/resources/js/irc/: CommandResult.ts  IrcClient.ts  buildHandlers.ts  constants.ts  types.ts
src/resources/js/irc/handlers/: joinHandler.ts  kickHandler.ts  modeHandler.ts  motdHandler.ts  nickHandler.ts  partHandler.ts  pingHandler.ts  privmsgHandler.ts  quitHandler.ts  rplEndOfNamesHandler.ts  rplNameReplyHandler.ts  rplTopicHandler.ts  rplTopicWhoTimeHandler.ts  topicHandler.ts  welcomeHandler.ts  whoisHandler.ts
src/resources/js/irc/models/: Channel.ts  User.ts  Whois.ts
src/resources/js/irc/utils/: classifyLine.ts
src/resources/js/layouts/: AppLayout.vue
src/resources/js/layouts/app/: AppMainLayout.vue  AppSidebarLayout.vue
src/resources/js/layouts/auth/: AuthCardLayout.vue  AuthSimpleLayout.vue  AuthSplitLayout.vue
src/resources/js/layouts/settings/: Layout.vue
src/resources/js/lib/: createModelStore.ts  emitter.ts  getTabKey.ts  indexedDB.ts  isCacheExpired.ts  parseIrcLine.ts
src/resources/js/pages/: Chat.vue  Profile.vue
src/resources/js/pages/settings/: Account.vue  Profile.vue
src/resources/js/types/: IrcLine.ts  chat.ts  index.d.ts
src/resources/views/: app.blade.php
src/routes/: api.php  settings.php  web.php
test/irc-client/: ArgParser.cpp  BUILD.bazel
