load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "logger",
    srcs = ["Logger.cpp"],
    hdrs = ["Logger.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "arg_parser",
    srcs = ["ArgParser.cpp"],
    hdrs = ["ArgParser.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "ncurses_ui",
    srcs = ["NcursesUI.cpp"],
    hdrs = ["NcursesUI.hpp", "IOAdapter.hpp"],
    copts = ["-std=c++20"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "unix_socket_ui",
    srcs = ["UnixSocketUI.cpp"],
    hdrs = ["UnixSocketUI.hpp", "IOAdapter.hpp", "Logger.hpp"],
    copts = ["-std=c++20"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "commands",
    hdrs = glob(["Commands/*.hpp"]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "event_handlers",
    srcs = [],
    hdrs = glob(["EventHandlers/*.hpp"]),
    deps = [
        ":logger",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "irc_client_lib",
    srcs = ["IRCClient.cpp"],
    hdrs = [
        "IRCClient.hpp",
        "IRCEventKeys.hpp",
        "IOAdapter.hpp",
    ],
    deps = [
        ":logger",
        ":ncurses_ui",
        ":unix_socket_ui",
        ":commands",
    ],
    includes = ["Commands"], 
    copts = ["-std=c++20"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "irc-client",
    srcs = ["main.cpp"],
    deps = [
        ":irc_client_lib",
        ":logger",
        ":arg_parser",
        ":ncurses_ui",
        ":unix_socket_ui",
        ":event_handlers",
        ":commands", 
    ],
    copts = ["-std=c++20", "-Wall", "-Wextra"],
    linkopts = ["-lncurses", "-lpthread"],
    visibility = ["//visibility:public"],
)
