load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "irc_core",
    hdrs = [
        "Channel.hpp",
        "EventHandler.hpp",
        "User.hpp",
        "WhoisState.hpp",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "logger",
    srcs = ["Logger.cpp"],
    hdrs = ["Logger.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "arg_parser",
    srcs = ["ArgParser.cpp"],
    hdrs = ["ArgParser.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "ncurses_ui",
    srcs = ["NcursesUI.cpp"],
    hdrs = [
        "IOAdapter.hpp",
        "NcursesUI.hpp",
    ],
    copts = ["-std=c++23"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "unix_socket_ui",
    srcs = ["UnixSocketUI.cpp"],
    hdrs = [
        "IOAdapter.hpp",
        "Logger.hpp",
        "UnixSocketUI.hpp",
    ],
    copts = ["-std=c++23"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "commands",
    hdrs = glob(["Commands/*.hpp"]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "event_handlers",
    srcs = [],
    hdrs = glob(["EventHandlers/*.hpp"]),
    visibility = ["//visibility:public"],
    deps = [
        ":logger",
    ],
)

cc_library(
    name = "irc_client_lib",
    srcs = ["IRCClient.cpp"],
    hdrs = [
        "IOAdapter.hpp",
        "IRCClient.hpp",
        "IRCEventKeys.hpp",
    ],
    copts = ["-std=c++23"],
    includes = ["Commands"],
    visibility = ["//visibility:public"],
    deps = [
        ":arg_parser",
        ":commands",
        ":irc_core",
        ":logger",
        ":ncurses_ui",
        ":unix_socket_ui",
    ],
)

cc_binary(
    name = "irc-client",
    srcs = ["main.cpp"],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
    ],
    linkopts = [
        "-lncurses",
        "-lpthread",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":arg_parser",
        ":commands",
        ":event_handlers",
        ":irc_client_lib",
        ":logger",
        ":ncurses_ui",
        ":unix_socket_ui",
    ],
)
